[package]
name = "random-test-cli"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Generate random test cases from cp-ast-ecosystems share links"
repository = "https://github.com/manabeai/random-test-cli"
homepage = "https://github.com/manabeai/random-test-cli"

[workspace]

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cp-ast-core = "0.1.0"
cp-ast-json = "0.1.1"
rand = "0.8"
thiserror = "1"
url = "2"
webbrowser = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
